Fixed mobile overflow

--- a/app/assets/stylesheets/system_wide.css.scss
+++ b/app/assets/stylesheets/system_wide.css.scss
@@ -31,10 +31,6 @@ h1, h2, h3, li, tr {
 }
 
 /* Skills */
-table {
-	width: 400px;
-}
-
 .icon {
 	width: 30px;
 }
